maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:3: error: not found: value isOVerBaggle
    while (isOVerBaggle == false){
           ^RandomMouseMaze:6: error: not found: value pickUpBaggle
  pickUpBaggle
  ^