maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (isOVerBaggle == false){
      random3()
    }
  pickUpBaggle
}